# vestigium

./: .gitignore  README.md  pyproject.toml
.github/workflows/: quality.yml
docs/: architecture.md  development.md  usage.md
examples/: basic_error.py
src/: __init__.py  api.py
src/core/: context.py  handler.py  sanitizer.py
src/integrations/: __init__.py
src/models/: __init__.py  report.py
src/reports/: text_report.py
src/storage/: json_store.py
src/utils/: identifiers.py
src/vestigium/: __init__.py  api.py  config.py  runtime.py
src/vestigium/core/: __init__.py  context.py  handler.py  sanitizer.py
src/vestigium/incidents/: __init__.py  models.py
src/vestigium/integrations/: excepthook.py
src/vestigium/models/: report.py
src/vestigium/privacy/: adapter.py
src/vestigium/reports/: __init__.py  text_report.py
src/vestigium/snapshots/: __init__.py  builder.py  models.py
src/vestigium/storage/: __init__.py  base.py  json_store.py
src/vestigium/utils/: identifiers.py
tests/: conftest.py  test_api.py  test_config.py  test_context.py  test_handler.py  test_integration.py  test_reports.py  test_sanitizer.py  test_snapshots.py  test_storage.py
