[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vestigium"
version = "0.1.0"
description = "Exception-triggered forensic diagnostics snapshots for Python."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vestigium Contributors" },
]
dependencies = [
    "logprivacy>=0.5.1,<1.0",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vestigium = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-config --strict-markers"

[tool.coverage.run]
branch = true
source = ["vestigium"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.ruff]
target-version = "py310"
line-length = 88
src = ["src", "tests", "examples"]

[tool.ruff.lint]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I",
    "B",
    "UP",
    "RUF",
]

[tool.ruff.lint.per-file-ignores]
"examples/basic_error.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
files = ["src/vestigium"]
strict = true
warn_unused_configs = true
show_error_codes = true
pretty = true
